--- a/style.css
+++ b/style.css
@@ -553,6 +553,39 @@ header svg:not(:root) {
     margin: 5px 5px 5px;
 }
 
+.IJsqo {
+    position: absolute;
+    left: 2px;
+    top: 11px;
+    background: rgb(58, 60, 65);
+    color: rgb(255, 255, 255);
+    font-size: 13px;
+    font-weight: 500;
+    padding: 5px 9px 4px;
+    max-width: 50%;
+    text-transform: uppercase;
+    border-color: rgb(30, 32, 35) transparent;
+    z-index: 8;
+}
+
+.IJsqo:before {
+    content: "";
+    position: absolute;
+    bottom: -9px;
+    left: 0;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-color: inherit;
+    border-width: 9px 0 0 9px;
+}
+
+._1kXWW {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
 .res-card{
     padding: 10px 10px 17px;
     border: 1px solid #fff;
