--- a/style.css
+++ b/style.css
@@ -1457,11 +1457,6 @@ li{
     width: calc(100% - 32px);
 }
 
-.main_container {
-    position: relative;
-    margin: 24px 8px 16px 16px;
-}
-
 .styles_header{
     width: 100%;
     display: -webkit-box;
@@ -1470,6 +1465,23 @@ li{
     justify-content: space-between;
     padding-right: 16px;
     font-size: 1.15rem;
+}
+
+.styles_headerTitle{
+    line-height: 1.2;
+    -webkit-transition: all .2s ease;
+    transition: all .2s ease;
+}
+
+.styles_headerTitle{
+    color: #282c3f;
+    font-size: 1.15rem;
+    font-weight: 400;
+}
+
+.main_container{
+    position: relative;
+    margin: 24px 8px 16px 16px;
 }
 
 .styles_headerMain{
@@ -1494,6 +1506,20 @@ li{
     border-bottom: 0.5px solid #d3d3d3;
     height: 0.5px;
     margin: 20px 0;
+}
+
+.styles_dividerFull{
+    -webkit-animation: styles_openMenuDivider .4s ease-in-out forwards;
+    animation: styles_openMenuDivider .4s ease-in-out forwards;
+}
+
+@keyframes styles_openMenuDivider{
+    0% {
+        width: 100%;
+    }
+    100% {
+        width: 14%;
+    }
 }
 
 .styles_item{
