--- a/style.css
+++ b/style.css
@@ -248,16 +248,6 @@ header svg:not(:root) {
     font-weight: 600;
 }
 
-.PJaej {
-    color: #ffa700;
-    font-size: 10px;
-    top: 26px;
-    font-weight: 600;
-    position: absolute;
-    right: -24px;
-    text-transform: uppercase;
-}
-
 .OnlineHedader {
     margin-left: 20px;
 }
@@ -2634,6 +2624,7 @@ li{
     padding-right: 13px;
     -ms-flex-pack: center;
     justify-content: center;
+    cursor: pointer;
 }
 
 ._38OJP {
