--- a/style.css
+++ b/style.css
@@ -594,6 +594,12 @@ header svg:not(:root) {
     stroke: #1b1d2a;
 }
 
+._173fq {
+    fill: #60b246;
+    stroke-width: 2px;
+    stroke: #60b246;
+}
+
 ._2vS77 {
     position: absolute;
     top: 50%;
@@ -602,6 +608,10 @@ header svg:not(:root) {
     transform: translate(-50%,-50%);
     font-size: 14px;
     font-weight: 600;
+}
+
+._173fq ~ ._2vS77 {
+    color: #fff;
 }
 
 .OnlineHedader {
@@ -4068,6 +4078,7 @@ b {
     max-width: 1200px;
     min-width: 1200px;
     position: relative;
+    margin: 0 auto;
     display: -ms-flexbox;
     display: flex;
     margin-top: 31px;
@@ -4258,6 +4269,16 @@ b {
     left: -30px;
 }
 
+._2q4J3{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    /* width: 19px;
+    height: 21px; */
+}
+
 ._2sMsA {
     width: 366px;
 }
@@ -4409,10 +4430,23 @@ b {
     margin-right: 14px;
 }
 
-._3SG03,
-._33KRy {
-    -ms-flex-positive: 1;
-    flex-grow: 1;
+._23dMP {
+    font-size: 11px;
+    color: #686b78;
+    font-weight: 500;
+    margin-top: 2px;
+    position: relative;
+    display: block;
+    padding: 0;
+}
+
+._23dMP::after {
+    content: "\203A";
+    color: #fc8019;
+    font-size: 17px;
+    position: absolute;
+    left: 54px;
+    top: -5px;
 }
 
 ._2bWmk {
@@ -4650,3 +4684,35 @@ b {
     margin-top: 10px;
 }
 
+._3sNvC {
+    margin-left: 7px;
+    position: relative;
+    top: 4px;
+    display: inline;
+    cursor: pointer;
+}
+
+._1Accg {
+    border-bottom: 1px solid #e9e9eb;
+    margin: 17px 0 15px;
+}
+
+.ZBf6d {
+    background: #fff;
+    height: 60px;
+    min-height: 60px;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    font-weight: 600;
+    color: #282c3f;
+    padding: 0 30px;
+    z-index: 1;
+}
+
+._3ZAW1 {
+    flex: 1;
+    -ms-flex: 1;
+    text-align: right;
+}
