--- a/style.css
+++ b/style.css
@@ -71,6 +71,10 @@ textarea {
     appearance: none;
 }
 
+._green{
+    color: rgb(96, 178, 69);
+}
+
 /* Error */
 
 .GenericError__container {
@@ -4069,6 +4073,10 @@ b {
 
 /* Cart */
 
+.cupon{
+    background: #e9ecee;
+}
+
 ._340-t {
     min-height: 100%;
     background: #e9ecee;
@@ -4404,6 +4412,11 @@ b {
     position: relative;
 }
 
+._2bXOy2{
+    width: 100%;
+    display: flex;
+}
+
 ._3SG03,
 ._33KRy {
     -ms-flex-positive: 1;
@@ -4642,9 +4655,53 @@ b {
     height: 55px;
 }
 
+._2aJip:hover {
+    box-shadow: 0 3px 8px #e9e9eb;
+}
+
 ._2W5PY {
     font-size: 18px;
     margin-right: 15px;
+}
+
+._2eFfS {
+    border: 1px dashed #bebfc5;
+    padding: 0 15px;
+    margin: 18px 0;
+    color: #686b78;
+    font-size: 12px;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    height: 55px;
+}
+
+._2ksRx {
+    -ms-flex: 1;
+    flex: 1;
+}
+
+._2CuZt {
+    color: #3d4152;
+    text-transform: uppercase;
+    font-size: 13px;
+    font-weight: 600;
+}
+
+.jO5AL {
+    margin-top: 2px;
+    font-size: 12px;
+    color: #93959f;
+}
+
+._1cXUn {
+    text-transform: uppercase;
+    cursor: pointer;
+    margin-left: 8px;
+    font-weight: 600;
+    color: #282c3f;
+    font-size: 14px;
 }
 
 ._3e0Qi {
@@ -4714,3 +4771,416 @@ b {
     -ms-flex: 1;
     text-align: right;
 }
+
+/* Apply Cupon */
+
+.not_show_cupon {
+    position: absolute;
+    animation: cfcf .5s ease;
+    right: 0;
+    
+}
+
+@keyframes cfcf {
+    0% {
+        right: 601;
+    }
+    100% {
+        right: 0;
+    }
+}
+
+.show_cupon {
+    animation: cfcfc .5s ease;
+    right: 601;
+}
+
+@keyframes cfcfc {
+    0% {
+        right: -601;
+    }
+    100% {
+        right: 601;
+    }
+}
+
+.show_cupon .overlay {
+    z-index: 10000;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #282c3f;
+    opacity: .7;
+    overflow: hidden;
+}
+
+.trfj2 {
+    padding-left: 40px;
+    padding-right: 83px;
+    width: 478px;
+}
+
+._2tryz {
+    margin-top: 10px;
+}
+
+.Dm4hT {
+    position: relative;
+    padding-bottom: 40px;
+    display: block;
+}
+
+._2x3kD {
+    width: calc(100% - 110px);
+}
+
+._3HIZ1 {
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .12);
+}
+
+._3keqX {
+    position: absolute;
+    top: 1px;
+    right: 0;
+    width: 110px;
+    background: #fc8019;
+    color: #fff;
+    height: 50px;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    cursor: pointer;
+    font-weight: 600;
+}
+
+._3sxJM {
+    position: relative;
+    min-height: calc(100vh - 200px);
+}
+
+._1p3XG {
+    border: 1px solid #e9e9eb;
+    padding: 28px 0 35px 30px;
+    margin-bottom: 30px;
+}
+
+._1aSpx {
+    color: #7e808c;
+    font-weight: 600;
+    margin: 0 0 28px;
+    font-size: 12px;
+    text-transform: uppercase;
+}
+
+.-QmN- {
+    position: relative;
+    padding: 0 30px 35px 0;
+    margin-bottom: 40px;
+    border-bottom: 1px dashed #a9abb2;
+}
+
+._2fpj9,
+._3x0ey {
+    display: -ms-flexbox;
+    display: flex;
+}
+
+._2Vb6W {
+    margin-bottom: 15px;
+}
+
+._2fpj9 {
+    min-width: 105px;
+    height: 35px;
+    border: 1px solid #daceb7;
+    background-color: #fffae6;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+._33BbS {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+._2prG7 {
+    font-size: 1.07rem;
+    font-weight: 500;
+    height: 100%;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    position: relative;
+    padding: 0 15px;
+}
+
+._3AmpP {
+    position: absolute;
+    top: -1px;
+    left: -3.5px;
+    -ms-transform-origin: center;
+    transform-origin: center;
+    -ms-transform: scaleX(.7);
+    transform: scaleX(.7);
+}
+
+._3AmpP::before {
+    top: 0;
+    border: 5px solid transparent;
+    border-top: 5px solid #daceb7;
+}
+
+._3AmpP::after,
+._3AmpP::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    box-sizing: border-box;
+    width: 10px;
+    height: 10px;
+}
+
+._3AmpP::after {
+    top: -2px;
+    border: 5px solid transparent;
+    border-top: 5px solid #fff;
+}
+
+._3ohAi {
+    position: absolute;
+    bottom: -1px;
+    left: -3.5px;
+    -ms-transform-origin: center;
+    transform-origin: center;
+    -ms-transform: scaleX(.7);
+    transform: scaleX(.7);
+}
+
+._3ohAi::before {
+    bottom: 0;
+    border: 5px solid transparent;
+    border-bottom: 5px solid #daceb7;
+}
+
+._3ohAi::after,
+._3ohAi::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    box-sizing: border-box;
+    width: 10px;
+    height: 10px;
+}
+
+._3ohAi::after {
+    bottom: -2px;
+    border: 5px solid transparent;
+    border-bottom: 5px solid #fff;
+}
+
+.v0d5B {
+    color: #3e4152;
+    font-size: 1.14rem;
+    font-weight: 500;
+}
+
+.mFwvW {
+    color: #686b78;
+    font-size: .92rem;
+    margin-top: 9px;
+}
+
+.rteNN {
+    position: relative;
+}
+
+.CYLGD {
+    margin-top: 8px;
+}
+
+.QHG0M {
+    overflow: hidden;
+    transition: height .3s ease-out;
+}
+
+._3lKvf {
+    font-size: .92rem;
+    color: #686b78;
+}
+
+._2eryw {
+    font-weight: 500;
+}
+
+.B9haR {
+    margin-top: 15px;
+}
+
+._28V8H {
+    position: relative;
+    list-style: none;
+    margin-bottom: 10px;
+    padding-left: 20px;
+}
+
+._28V8H::before {
+    position: absolute;
+    content: "";
+    height: 5px;
+    width: 5px;
+    background-color: #282c3f;
+    top: 5px;
+    left: 4px;
+    border-radius: 50%;
+}
+
+.WybuQ {
+    border: 0;
+    background-color: transparent;
+    color: #5d8ed5;
+    font-size: .85rem;
+    font-weight: 700;
+    height: 28px;
+    width: 88px;
+    padding-left: 0 !important;
+    margin-top: 0 !important;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    outline: none;
+    cursor: pointer;
+}
+
+._1BIKz {
+    position: relative;
+    display: inline-block;
+    height: 8px;
+    width: 8px;
+    margin-right: 5px;
+}
+
+._1BIKz::before {
+    height: 2px;
+    width: 100%;
+    top: 50%;
+    left: 0;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+._1BIKz::after,
+._1BIKz::before {
+    position: absolute;
+    content: "";
+    background: #5d8ed5;
+}
+
+._1BIKz::after {
+
+    width: 2px;
+    height: 100%;
+    left: 50%;
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+
+}
+
+._1KzVF,
+._2lope {
+    font-weight: 600;
+    cursor: pointer;
+}
+
+._1KzVF {
+    text-decoration: none;
+    display: inline-block;
+    text-align: center;
+    font-size: 14px;
+    color: #fc8019;
+    letter-spacing: 0;
+    border: 1px solid #fc8019;
+    margin-top: 15px !important;
+    line-height: 36px;
+    width: auto;
+    height: 36px;
+    padding: 0 15px;
+    outline: none;
+    min-width: 120px;
+    background: #fff;
+}
+
+._1KzVF:hover {
+    position: relative;
+    box-shadow: 0 2px 8px #d4d5d9;
+}
+
+._10-lm {
+    height: calc(100vh - 80px);
+    width: 100%;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-pack: center;
+    justify-content: center;
+    margin: 0 auto;
+    text-align: center;
+    background: #fff;
+}
+
+._3a391 {
+    width: 271px;
+    height: 256px;
+    background-image: url("https://media-assets.swiggy.com/swiggy/image/upload/fl_lossy,f_auto,q_auto/2xempty_cart_yfxml0");
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0 auto;
+}
+
+._3Y9ZP {
+    margin-top: 24px;
+    font-size: 20px;
+    font-weight: 600;
+    color: #535665;
+}
+
+.d7jCU {
+    margin-top: 8px;
+    color: #7e808c;
+}
+
+._3pgCg {
+    margin-top: 30px;
+    padding: 11px 20px;
+    text-transform: uppercase;
+    background-color: #fc8019;
+    color: #fff;
+    font-weight: 600;
+    cursor: pointer;
+    border: 0;
+    outline: 0;
+    font-size: 15px;
+    text-align: center;
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+    transition: transform .8s cubic-bezier(.2, 1, .2, 1);
+}
+
+._3pgCg:hover {
+    position: relative;
+    box-shadow: 0 4px 14px #d4d5d9;
+}
+
